{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 39,
  "lineage": "c55d7a80-79a2-85a8-ac54-5080a18d0763",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-01f4a214e0443b291",
            "domain": "vpc",
            "id": "eipalloc-09c5f833b43b7708d",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-07cb7e3e31d6fd39f",
            "private_dns": "ip-10-0-1-50.ca-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-15-223-21-232.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.223.21.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform-gw",
            "aws_network_interface.terraform-nic",
            "aws_security_group.terraform-allow-ports",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_apache-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db72f413fc1ddb2a",
            "arn": "arn:aws:ec2:ca-central-1:546877288076:instance/i-0d7f17038ce99ea39",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7f17038ce99ea39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07cb7e3e31d6fd39f"
              }
            ],
            "primary_network_interface_id": "eni-07cb7e3e31d6fd39f",
            "private_dns": "ip-10-0-1-50.ca-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "15.223.21.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3eda4d73d6b57c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e22cc307b77776bc",
            "tags": {
              "Name": "terraform_server"
            },
            "tags_all": {
              "Name": "terraform_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db8824ac18c3999d"
            ]
          },
          "dependencies": [
            "aws_network_interface.terraform-nic",
            "aws_security_group.terraform-allow-ports",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:546877288076:internet-gateway/igw-07d3f86bea4e2fcf4",
            "id": "igw-07d3f86bea4e2fcf4",
            "owner_id": "546877288076",
            "tags": {
              "Name": "terraform-gw"
            },
            "tags_all": {
              "Name": "terraform-gw"
            },
            "vpc_id": "vpc-0054c8c40b6219436"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-07cb7e3e31d6fd39f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:fa:3d:0f:ba:e0",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0db8824ac18c3999d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e22cc307b77776bc"
          },
          "dependencies": [
            "aws_security_group.terraform-allow-ports",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:546877288076:route-table/rtb-0423966b611fdcda1",
            "id": "rtb-0423966b611fdcda1",
            "owner_id": "546877288076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d3f86bea4e2fcf4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-routetable"
            },
            "tags_all": {
              "Name": "terraform-routetable"
            },
            "vpc_id": "vpc-0054c8c40b6219436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-gw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdddce9c52abf183",
            "route_table_id": "rtb-0423966b611fdcda1",
            "subnet_id": "subnet-0e22cc307b77776bc"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-gw",
            "aws_route_table.terraform-routetable",
            "aws_subnet.terraform-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-allow-ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:546877288076:security-group/sg-0db8824ac18c3999d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db8824ac18c3999d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-allow-ports",
            "name_prefix": "",
            "owner_id": "546877288076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-allow-ports"
            },
            "tags_all": {
              "Name": "terraform-allow-ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0054c8c40b6219436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:546877288076:subnet/subnet-0e22cc307b77776bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e22cc307b77776bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "546877288076",
            "tags": {
              "Name": "dev-subnet"
            },
            "tags_all": {
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-0054c8c40b6219436"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:546877288076:vpc/vpc-0054c8c40b6219436",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c447ad0966a3d67",
            "default_route_table_id": "rtb-099595f03788b3329",
            "default_security_group_id": "sg-05d0d7f5e52db93a0",
            "dhcp_options_id": "dopt-18525370",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0054c8c40b6219436",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099595f03788b3329",
            "owner_id": "546877288076",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}